--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,76 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.question-card {
+  margin: 0 auto;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+  width: 80%;
+  height: auto;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: rgba(128, 128, 128, 0.8);
+  padding: 16px;
+  border-radius: 16px;
   color: white;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+  transition: background-color 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
+ul {
+  list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li {
+  margin-top: 8px;
+  color: #ca8300;
+  background-color: darkgray;
+  padding: 16px;
+  border: 3px solid white;
+  border-radius: 20px;
+  font-size: 20px;
+  transition: background-color 0.3s;
+  cursor: pointer;
+}
+
+li:hover {
+  background-color: darkblue;
+}
+
+.question-text {
+  margin-left: 45px;
+  color: darkblue;
+  font-size: 30px;
+}
+
+.final-results {
+  margin: 0 auto;
+
+  width: 50%;
+  height: auto;
+  margin-top: 64px;
+
+  background-color: rgba(128, 128, 128, 0.7);
+  padding: 16px;
+  border-radius: 16px;
+  color: white;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+  transition: background-color 0.3s;
+}
+
+button {
+  background-color: darkblue;
+  border: none;
+  color: white;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 24px;
+}
+
+button:hover {
+  background-color: #ff0000; 
 }
